Integrated Stripe payment flow, seat selection logic and success page

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Events</title>
 </head>
 <body>
+    <script src="https://js.stripe.com/v3/"></script>
+
     <div id="root"></div> <!-- React will render here -->
 </body>
 </html>
